// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerManager handleError should render error 1`] = `
<withI18n(withLocales(withClient(VaultUnlocker)))
  onUnlock={[Function]}
>
  <div
    id="coz-harvest-modal-place"
  />
  <React.Fragment>
    <withI18n(withLocales(withKonnectorLocales(AccountForm))
      account={
        Object {
          "_id": "61c683295560485db0f34b859197c581",
          "account_type": "konnectest",
          "auth": Object {
            "passphrase": "bar",
            "username": "foo",
          },
          "identifier": "username",
        }
      }
      error={[Error: Test error]}
      konnector={
        Object {
          "fields": Object {
            "passphrase": Object {
              "type": "password",
            },
            "username": Object {
              "type": "text",
            },
          },
          "slug": "konnectest",
        }
      }
      onBack={[Function]}
      onSubmit={[Function]}
      readOnlyIdentifier={false}
      submitting={false}
    />
  </React.Fragment>
</withI18n(withLocales(withClient(VaultUnlocker)))>
`;

exports[`TriggerManager should redirect to OAuthForm 1`] = `
<withI18n(OAuthForm)
  konnector={
    Object {
      "oauth": Object {
        "scope": "test",
      },
    }
  }
  onSuccess={[Function]}
  submitting={false}
/>
`;

exports[`TriggerManager should render with account 1`] = `
<withI18n(withLocales(withClient(VaultUnlocker)))
  onUnlock={[Function]}
>
  <div
    id="coz-harvest-modal-place"
  />
  <React.Fragment>
    <withI18n(withLocales(withKonnectorLocales(AccountForm))
      account={
        Object {
          "_id": "61c683295560485db0f34b859197c581",
          "account_type": "konnectest",
          "auth": Object {
            "passphrase": "bar",
            "username": "foo",
          },
          "identifier": "username",
        }
      }
      konnector={
        Object {
          "fields": Object {
            "passphrase": Object {
              "type": "password",
            },
            "username": Object {
              "type": "text",
            },
          },
          "slug": "konnectest",
        }
      }
      onBack={[Function]}
      onSubmit={[Function]}
      readOnlyIdentifier={false}
      submitting={false}
    />
  </React.Fragment>
</withI18n(withLocales(withClient(VaultUnlocker)))>
`;

exports[`TriggerManager should render without account 1`] = `
<withI18n(withLocales(withClient(VaultUnlocker)))
  onUnlock={[Function]}
>
  <div
    id="coz-harvest-modal-place"
  />
  <withI18n(withLocales(DumbVaultCiphersList))
    ciphers={Array []}
    konnector={
      Object {
        "fields": Object {
          "passphrase": Object {
            "type": "password",
          },
          "username": Object {
            "type": "text",
          },
        },
        "slug": "konnectest",
      }
    }
    onSelect={[Function]}
  />
</withI18n(withLocales(withClient(VaultUnlocker)))>
`;
